syntax = "proto3";

package gohome.plugins.p1_homewizard.v1;

option go_package = "github.com/joshp123/gohome/proto/gen/plugins/p1_homewizard/v1;p1homewizardv1";

message Info {
  string product_name = 1;
  string product_type = 2;
  string serial = 3;
  string firmware_version = 4;
  string api_version = 5;
}

message GetInfoRequest {}

message GetInfoResponse {
  Info info = 1;
}

message GetSnapshotRequest {}

message GetSnapshotResponse {
  string json = 1;
}

message GetTelegramRequest {}

message GetTelegramResponse {
  string telegram = 1;
}

message P1HomewizardConfig {
  string base_url = 1;
  double tariff_import_t1_eur_per_kwh = 2;
  double tariff_import_t2_eur_per_kwh = 3;
  double tariff_export_t1_eur_per_kwh = 4;
  double tariff_export_t2_eur_per_kwh = 5;
}

service P1HomewizardService {
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);
  rpc GetSnapshot(GetSnapshotRequest) returns (GetSnapshotResponse);
  rpc GetTelegram(GetTelegramRequest) returns (GetTelegramResponse);
}
